syntax = "proto3";
package hlcmsg;
import "range_meta.proto";

message PageNotes{
  uint32 pageid = 1;
  uint32 uid = 2;
  repeated RangeMeta highlights = 3;
}